--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  mvc:
+    static-path-pattern: /static/**
   application.name: AI-Create
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -38,7 +40,6 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名
       logic-delete-value: 1 # 逻辑已删除值
       logic-not-delete-value: 0 # 逻辑未删除值
-  type-enums-package: com.akai.aicreator.model.enums
 springdoc:
   group-configs:
     - group: 'default'
@@ -53,17 +54,25 @@ langchain4j:
     chat-model:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
       api-key: ${API_KEY}
-      model-name: qwen-plus
+      model-name: qwen-plus-latest
       max-tokens: 8192
       log-requests: true
       log-responses: true
     streaming-chat-model:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
       api-key: ${API_KEY}
-      model-name: qwen-plus
+      model-name: qwen-plus-latest
       max-tokens: 8192
       log-requests: true
       log-responses: true
+# 阿里云 OSS 配置 (密钥通过环境变量读取)
+aliyun:
+  oss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    bucketName: akainews
+    accessKeyId: ${OSS_ACCESS_KEY_ID}
+    accessKeySecret: ${OSS_ACCESS_KEY_SECRET}
+
 
 
 
