--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,10 @@
 spring:
-  mvc:
-    static-path-pattern: /static/**
   application.name: AI-Create
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ai_creator
     username: root
     password: 123456
-
     # redis配置
   data:
     redis:
@@ -15,6 +12,13 @@ spring:
       host: localhost
       port: 6379
       ttl: 3600
+      password:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
     # sa-token配置
 sa-token:
   # token名称 (同时也是cookie名称)
@@ -40,14 +44,15 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名
       logic-delete-value: 1 # 逻辑已删除值
       logic-not-delete-value: 0 # 逻辑未删除值
+
 springdoc:
-  group-configs:
-    - group: 'default'
-      packages-to-scan: com.akai.aicreator.controller
+  api-docs:
+    enabled: true
 knife4j:
-  enable: false
+  enable: true
   setting:
     language: zh_cn
+
 # AI
 langchain4j:
   open-ai:
@@ -58,11 +63,31 @@ langchain4j:
       max-tokens: 8192
       log-requests: true
       log-responses: true
+      max-retries: 3
+    #     流式模型
     streaming-chat-model:
       base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
       api-key: ${API_KEY}
       model-name: qwen-plus-latest
       max-tokens: 8192
+      log-requests: true
+      log-responses: true
+      max-retries: 3
+#      智能路由模型
+    routing-chat-model:
+      base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
+      api-key: ${API_KEY}
+      model-name: qwen-plus-latest
+      max-tokens: 8192
+      log-requests: true
+      log-responses: true
+      # 推理 AI 模型配置（用于复杂的推理任务）
+    reasoning-streaming-chat-model:
+      base-url: https://dashscope.aliyuncs.com/compatible-mode/v1
+      api-key: ${API_KEY}
+      model-name: qwen-plus-latest
+      max-tokens: 32768
+      temperature: 0.1
       log-requests: true
       log-responses: true
 # 阿里云 OSS 配置 (密钥通过环境变量读取)
@@ -72,6 +97,9 @@ aliyun:
     bucketName: akainews
     accessKeyId: ${OSS_ACCESS_KEY_ID}
     accessKeySecret: ${OSS_ACCESS_KEY_SECRET}
+  # RabbitMQ配置
+
+
 
 
 
